# adaptive-projection-mapping

./: CMakeLists.txt  README.md
libs/A/: CMakeLists.txt
libs/A/src/: A.cpp
libs/capture/: CMakeLists.txt
libs/capture/include/capture/: CameraCapture.h  Capture.h
libs/capture/src/: CameraCapture.cpp  Capture.cpp
libs/capture/test/: BTests.cpp  CMakeLists.txt
libs/gui/: CMakeLists.txt
libs/gui/include/gui/: A.h  CaptureImage.h  QVideoProvider.h
libs/gui/src/: A.cpp  CaptureImage.cpp  QVideoProvider.cpp
libs/model/: CMakeLists.txt
libs/model/include/model/: Image.h  Mapping.h  Scene.h  Sculpture.h  Shape.h
libs/model/src/: Image.cpp  Mapping.cpp  Scene.cpp  Sculpture.cpp  Shape.cpp
libs/projection/: CMakeLists.txt
libs/projection/include/projection/: Projection.h
libs/projection/src/: Projection.cpp
libs/projection/test/: CMakeLists.txt
qml/: main.qml
src/: main.cpp
